--- a/Report/report.tex
+++ b/Report/report.tex
@@ -304,7 +304,7 @@ A soft score of the process was also calculated, with a threshold of 6.0, no ave
 
 \section{Discussion}
 \subsection{Supervised WSD}
-The three most informative features we have are the 
+The three most informative features we have are the previous context, after context, and the target word. By adding in the target word probability we were able to increase our score by almost .4\%. Though this information is not in the above table. Removing the left context decreased our score by about .8% and removing the right context decreased our score by about .5\%
 
 \subsection{Dictionary WSD}
 TODO
